argocd/userlist/11.userlist-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userlist
  labels:
    app: userlist
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userlist
  template:
    metadata:
      labels:
        app: userlist
      #annotations:
      #  sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: userlist
        image: docker.io/ssongman/userlist:v1
        ports:
        - containerPort: 8181
        #readinessProbe:
        #  httpGet:
        #    path: /
        #    port: 8181
        #  #initialDelaySeconds: 5
        #  periodSeconds: 1
