argocd/userlist/12.userlist-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: userlist-svc
spec:
  selector:
    app: userlist
  ports:
  - name: http
    protocol: TCP
    port: 8181
    targetPort: 8181
  #type: ClusterIP        ## default
  #type: LoadBalancer
  type: NodePort
  #loadBalancerIP: ""
